refactor to single activity architecture

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -6,8 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?attr/backgroundPrimaryVariant"
-    android:orientation="vertical"
-    tools:context=".main.ui.MainActivity">
+    android:orientation="vertical" >
 
 
     <com.google.android.material.appbar.MaterialToolbar
