--- a/app/src/main/res/layout/fragment_library.xml
+++ b/app/src/main/res/layout/fragment_library.xml
@@ -6,8 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?attr/backgroundPrimary"
-    android:orientation="vertical"
-    tools:context=".search.ui.SearchActivity">
+    android:orientation="vertical" >
 
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/materialToolbar"
