add Room-backed favorite tracks

--- a/app/src/main/res/layout/fragment_library.xml
+++ b/app/src/main/res/layout/fragment_library.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?attr/backgroundPrimary"
-    android:orientation="vertical" >
+    android:orientation="vertical">
 
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/materialToolbar"
@@ -14,7 +13,7 @@
         android:layout_marginBottom="@dimen/space_8dp"
         app:navigationContentDescription="@string/back"
         app:navigationIconTint="?attr/textPrimary"
-        app:title="Медиатека"
+        app:title="@string/library"
         app:titleTextAppearance="@style/ToolbarTextAppearance"
         app:titleTextColor="?attr/textPrimary" />
 
