--- a/app/src/main/res/layout/fragment_favorites.xml
+++ b/app/src/main/res/layout/fragment_favorites.xml
@@ -1,35 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/favoritesContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="top|center_horizontal"
-    android:orientation="vertical">
+    tools:context=".library.ui.FavoritesFragment">
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:fontFamily="@font/ys_display_medium"
-        android:text=""
-        android:textSize="14sp"
-        android:visibility="invisible" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvTrackList"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="@dimen/space_8dp"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        tools:listitem="@layout/track_item" />
 
-    <ImageView
-        android:layout_width="@dimen/image_medium"
-        android:layout_height="@dimen/image_medium"
-        android:layout_gravity="center_horizontal"
-        android:contentDescription="@string/something_went_wrong"
-        android:scaleType="centerCrop"
-        android:src="?attr/noResultsImage" />
+    <LinearLayout
+        android:id="@+id/llEmptyFavorites"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="top|center_horizontal"
+        android:orientation="vertical"
+        android:visibility="gone">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:fontFamily="@font/ys_display_regular"
-        android:text="@string/favorites_empty"
-        android:textAlignment="center"
-        android:textColor="?attr/foreground"
-        android:textSize="@dimen/text_size_large" />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:fontFamily="@font/ys_display_medium"
+            android:text=""
+            android:textSize="14sp"
+            android:visibility="invisible" />
 
-</LinearLayout>
+        <ImageView
+            android:layout_width="@dimen/image_medium"
+            android:layout_height="@dimen/image_medium"
+            android:layout_gravity="center_horizontal"
+            android:contentDescription="@string/something_went_wrong"
+            android:scaleType="centerCrop"
+            android:src="?attr/noResultsImage" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:fontFamily="@font/ys_display_regular"
+            android:text="@string/favorites_empty"
+            android:textAlignment="center"
+            android:textColor="?attr/foreground"
+            android:textSize="@dimen/text_size_large" />
+    </LinearLayout>
+
+</FrameLayout>
