--- a/app/src/main/res/layout/fragment_player.xml
+++ b/app/src/main/res/layout/fragment_player.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fillViewport="true"
-    android:background="?attr/backgroundPrimary">
+    android:background="?attr/backgroundPrimary"
+    android:fillViewport="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -69,7 +68,7 @@
             android:background="?attr/rounded_button"
             android:contentDescription="@string/start_stop"
             android:src="?attr/play"
-            app:layout_constraintEnd_toStartOf="@+id/favoriteButton"
+            app:layout_constraintEnd_toStartOf="@+id/likeButton"
             app:layout_constraintStart_toEndOf="@+id/leftButton"
             app:layout_constraintTop_toBottomOf="@+id/tvArtistName" />
 
@@ -86,7 +85,7 @@
             app:layout_constraintTop_toBottomOf="@+id/tvArtistName" />
 
         <ImageButton
-            android:id="@+id/favoriteButton"
+            android:id="@+id/likeButton"
             android:layout_width="51dp"
             android:layout_height="51dp"
             android:layout_marginHorizontal="@dimen/space_16dp"
