--- a/app/src/main/res/layout/activity_root.xml
+++ b/app/src/main/res/layout/activity_root.xml
@@ -18,23 +18,23 @@
         app:navGraph="@navigation/root_navigation_graph" />
 
     <View
+        android:id="@+id/bottomNavigationBorder"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/yandex_light_gray"
         app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigationView"
+        style="@style/BottomNavStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:menu="@menu/navigation_items"
-        style="@style/BottomNavStyle" />
-
+        app:menu="@menu/navigation_items" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
