--- a/app/src/main/res/layout/fragment_playlists.xml
+++ b/app/src/main/res/layout/fragment_playlists.xml
@@ -20,6 +20,7 @@
         app:cornerRadius="54dp" />
 
     <ImageView
+        android:id="@+id/noPlaylistsImage"
         android:layout_width="@dimen/image_medium"
         android:layout_height="@dimen/image_medium"
         android:layout_gravity="center_horizontal"
@@ -29,6 +30,7 @@
         android:src="?attr/noResultsImage" />
 
     <TextView
+        android:id="@+id/noPlaylistsText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -37,4 +39,13 @@
         android:textAlignment="center"
         android:textColor="?attr/foreground"
         android:textSize="@dimen/text_size_large" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/playlistsRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginHorizontal="@dimen/space_8dp"
+        android:layout_weight="1"
+        android:visibility="gone" />
+
 </LinearLayout>
