update UI to match design mockup

--- a/app/src/main/res/layout/fragment_playlists.xml
+++ b/app/src/main/res/layout/fragment_playlists.xml
@@ -11,6 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
+        android:layout_marginBottom="8dp"
         android:backgroundTint="?attr/retryButtonBackground"
         android:fontFamily="@font/ys_display_medium"
         android:text="@string/new_playlist"
@@ -24,7 +25,6 @@
         android:layout_width="@dimen/image_medium"
         android:layout_height="@dimen/image_medium"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="10dp"
         android:contentDescription="@string/something_went_wrong"
         android:scaleType="centerCrop"
         android:src="?attr/noResultsImage" />
