--- a/app/src/main/res/layout/playlist_item.xml
+++ b/app/src/main/res/layout/playlist_item.xml
@@ -1,24 +1,25 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/rootLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="8dp"
-    android:gravity="center_horizontal"
-    android:orientation="vertical">
+    android:layout_margin="@dimen/space_8dp">
 
     <com.google.android.material.card.MaterialCardView
-        android:layout_width="match_parent"
+        android:id="@+id/playlistCard"
+        android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_weight="1"
         app:cardCornerRadius="8dp"
-        app:cardElevation="0dp">
+        app:cardElevation="0dp"
+        app:layout_constraintDimensionRatio="1:1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
             android:id="@+id/playlistImage"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="?attr/backgroundPrimary"
             android:contentDescription="@string/cover"
             android:scaleType="centerCrop"
             android:src="@drawable/placeholder" />
@@ -26,21 +27,30 @@
 
     <TextView
         android:id="@+id/playlistTitle"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:ellipsize="end"
+        android:fontFamily="@font/ys_display_regular"
         android:maxLines="1"
         android:textColor="?attr/foreground"
-        android:textSize="@dimen/text_size_medium" />
+        android:textSize="@dimen/text_size_medium"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/playlistCard" />
 
     <TextView
         android:id="@+id/trackCount"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="2dp"
         android:ellipsize="end"
+        android:fontFamily="@font/ys_display_regular"
         android:maxLines="1"
         android:textColor="?attr/foreground"
-        android:textSize="@dimen/text_size_medium" />
-</LinearLayout>
+        android:textSize="@dimen/text_size_medium"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/playlistTitle" />
+</androidx.constraintlayout.widget.ConstraintLayout>
