--- a/app/src/main/res/layout/fragment_add_playlist.xml
+++ b/app/src/main/res/layout/fragment_add_playlist.xml
@@ -57,7 +57,8 @@
         android:layout_marginEnd="24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/playlistImageContainer">
+        app:layout_constraintTop_toBottomOf="@id/playlistImageContainer"
+        app:hintTextColor="@color/text_input_hint_color">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/playlistTitleInput"
@@ -76,7 +77,8 @@
         android:layout_marginEnd="24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/playlistTitleLayout">
+        app:layout_constraintTop_toBottomOf="@id/playlistTitleLayout"
+        app:hintTextColor="@color/text_input_hint_color">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/playlistDescriptionInput"
