--- a/app/src/main/res/layout/playlist_item.xml
+++ b/app/src/main/res/layout/playlist_item.xml
@@ -34,7 +34,7 @@
         android:fontFamily="@font/ys_display_regular"
         android:maxLines="1"
         android:textColor="?attr/foreground"
-        android:textSize="@dimen/text_size_medium"
+        android:textSize="@dimen/text_12sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/playlistCard" />
@@ -48,7 +48,7 @@
         android:fontFamily="@font/ys_display_regular"
         android:maxLines="1"
         android:textColor="?attr/foreground"
-        android:textSize="@dimen/text_size_medium"
+        android:textSize="@dimen/text_12sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
