--- a/app/src/main/res/layout/fragment_add_playlist.xml
+++ b/app/src/main/res/layout/fragment_add_playlist.xml
@@ -26,7 +26,6 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="26dp"
         android:layout_marginEnd="24dp"
-        android:background="?attr/backgroundPrimary"
         app:cardCornerRadius="8dp"
         app:cardElevation="0dp"
         app:layout_constraintDimensionRatio="1:1"
@@ -34,16 +33,24 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbarButtonBack">
 
-        <ImageView
-            android:id="@+id/playlistImage"
+        <FrameLayout
+            android:id="@+id/playlistFrame"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="?attr/backgroundPrimary"
-            android:clickable="true"
-            android:contentDescription="@string/add_photo"
-            android:focusable="true"
-            android:scaleType="centerCrop"
-            android:src="@drawable/add_photo" />
+            android:clipChildren="false"
+            android:clipToPadding="false"
+            android:foreground="@drawable/dashed_border">
+
+            <ImageView
+                android:id="@+id/playlistImage"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:contentDescription="@string/add_photo"
+                android:scaleType="center"
+                android:src="@drawable/add_photo" />
+
+        </FrameLayout>
     </com.google.android.material.card.MaterialCardView>
 
 
@@ -55,10 +62,10 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="24dp"
+        app:hintTextColor="@color/text_input_hint_color"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/playlistImageContainer"
-        app:hintTextColor="@color/text_input_hint_color">
+        app:layout_constraintTop_toBottomOf="@id/playlistImageContainer">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/playlistTitleInput"
@@ -75,10 +82,10 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="24dp"
+        app:hintTextColor="@color/text_input_hint_color"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/playlistTitleLayout"
-        app:hintTextColor="@color/text_input_hint_color">
+        app:layout_constraintTop_toBottomOf="@id/playlistTitleLayout">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/playlistDescriptionInput"
