add track click handler in PlaylistDetailsFragment

--- a/app/src/main/res/navigation/root_navigation_graph.xml
+++ b/app/src/main/res/navigation/root_navigation_graph.xml
@@ -50,6 +50,10 @@
     <fragment
         android:id="@+id/playlistDetailsFragment"
         android:name="com.example.playlistmaker.library.ui.PlaylistDetailsFragment"
-        android:label="PlaylistDetailsFragment" />
+        android:label="PlaylistDetailsFragment">
+        <action
+            android:id="@+id/action_playlistDetailsFragment_to_playerFragment"
+            app:destination="@id/playerFragment" />
+    </fragment>
 
 </navigation>
