--- a/app/src/main/res/layout/fragment_add_playlist.xml
+++ b/app/src/main/res/layout/fragment_add_playlist.xml
@@ -46,6 +46,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
+                android:background="?attr/backgroundPrimary"
                 android:contentDescription="@string/add_photo"
                 android:scaleType="center"
                 android:src="@drawable/add_photo" />
