--- a/app/src/main/res/layout/fragment_playlist_details.xml
+++ b/app/src/main/res/layout/fragment_playlist_details.xml
@@ -35,11 +35,14 @@
 
         <TextView
             android:id="@+id/title"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
+            android:layout_marginHorizontal="16dp"
             android:layout_marginTop="24dp"
+            android:ellipsize="end"
             android:fontFamily="@font/ys_display_bold"
+            android:maxLines="1"
+            android:singleLine="true"
             android:text=""
             android:textColor="@color/yandex_black"
             android:textSize="24sp"
@@ -48,11 +51,14 @@
 
         <TextView
             android:id="@+id/description"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
+            android:layout_marginHorizontal="16dp"
             android:layout_marginTop="8dp"
+            android:ellipsize="end"
             android:fontFamily="@font/ys_display_regular"
+            android:maxLines="1"
+            android:singleLine="true"
             android:text=""
             android:textColor="@color/yandex_black"
             android:textSize="18sp"
@@ -61,11 +67,14 @@
 
         <TextView
             android:id="@+id/misc"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
+            android:layout_marginHorizontal="16dp"
             android:layout_marginTop="8dp"
+            android:ellipsize="end"
             android:fontFamily="@font/ys_display_regular"
+            android:maxLines="1"
+            android:singleLine="true"
             android:text=""
             android:textColor="@color/yandex_black"
             android:textSize="18sp"
@@ -104,7 +113,6 @@
         android:background="@drawable/bottom_sheet_bg"
         android:orientation="vertical"
         app:behavior_hideable="false"
-        app:behavior_peekHeight="300dp"
         app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
 
         <LinearLayout
@@ -154,6 +162,16 @@
 
         </LinearLayout>
 
+        <TextView
+            android:id="@+id/noTracksMessage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="@dimen/space_24dp"
+            android:fontFamily="@font/ys_display_regular"
+            android:text="@string/no_tracks_message"
+            android:textColor="?attr/foreground"
+            android:textSize="@dimen/text_size_medium" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/trackList"
