--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -23,4 +23,6 @@
 
     <attr name="retryButtonBackground" format="color" />
 
+    <attr name="light_gray_to_white" format="color" />
+
 </resources>
