--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -30,5 +30,8 @@
 
         <item name="retryButtonBackground">@color/white</item>
 
+        <item name="light_gray_to_white">@color/white</item>
+
+
     </style>
 </resources>
