fix player screen crush

--- a/app/src/main/res/layout/fragment_add_playlist.xml
+++ b/app/src/main/res/layout/fragment_add_playlist.xml
@@ -73,7 +73,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/label_title"
-            android:maxLines="1" />
+            android:singleLine="true"
+            android:imeOptions="actionDone"
+            android:inputType="text" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -94,9 +96,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/description"
-            android:inputType="textMultiLine"
-            android:maxLines="1"
-            android:scrollHorizontally="false" />
+            android:singleLine="true"
+            android:imeOptions="actionDone"
+            android:inputType="text" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
