--- a/app/src/main/res/layout/fragment_player.xml
+++ b/app/src/main/res/layout/fragment_player.xml
@@ -61,17 +61,17 @@
             app:layout_constraintTop_toBottomOf="@+id/tvTrackTitle" />
 
 
-        <ImageButton
-            android:id="@+id/ibPlayButton"
+        <com.example.playlistmaker.player.ui.PlaybackButtonView
+            android:id="@+id/playButton"
             android:layout_width="84dp"
             android:layout_height="84dp"
             android:layout_marginVertical="40dp"
-            android:background="?attr/rounded_button"
             android:contentDescription="@string/start_stop"
-            android:src="?attr/play"
             app:layout_constraintEnd_toStartOf="@+id/likeButton"
             app:layout_constraintStart_toEndOf="@+id/leftButton"
-            app:layout_constraintTop_toBottomOf="@+id/tvArtistName" />
+            app:layout_constraintTop_toBottomOf="@+id/tvArtistName"
+            app:pause="?attr/pause"
+            app:play="?attr/play" />
 
         <ImageButton
             android:id="@+id/leftButton"
@@ -107,7 +107,7 @@
             android:text="@string/current_time_start"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/ibPlayButton" />
+            app:layout_constraintTop_toBottomOf="@+id/playButton" />
 
         <TextView
             android:id="@+id/tvTrackDurationLabel"
@@ -244,8 +244,8 @@
         <View
             android:layout_width="50dp"
             android:layout_height="4dp"
-            android:layout_marginTop="8dp"
             android:layout_gravity="center_horizontal"
+            android:layout_marginTop="8dp"
             android:background="@drawable/bottom_sheet_handle" />
 
         <Button
